TFP-6069 endrer at fagsak alltid hentes hvis behandling hentes. Bedre lesbarhet. Bruker konsekvent språkkode fra dokumentfelles, ikke behandling, for lettere å få oversikt over bruk av behandling